--- a/src/index.njk
+++ b/src/index.njk
@@ -11,6 +11,7 @@ title: figamin.net
             <a class="sidebar-box" href="/about">About</a>
             <a class="sidebar-box" href="/blogs">Blogs</a>
             <a class="sidebar-box" href="/imageboards">Imageboards</a>
+            <a class="sidebar-box" href="/figzone">FigZone</a>
             <a class="sidebar-box" href="/fargo1999">Fargo1999</a>
             <a class="sidebar-box" href="/videos">Videos</a>
             <a class="sidebar-box" href="/net-friends">Net Friends</a>
@@ -20,6 +21,7 @@ title: figamin.net
             <a class="sidebar-box" href="/about">About</a>
             <a class="sidebar-box" href="/blogs">Blogs</a>
             <a class="sidebar-box" href="/imageboards">Imageboards</a>
+            <a class="sidebar-box" href="/figzone">FigZone</a>
             <a class="sidebar-box" href="/fargo1999">Fargo1999</a>
             <a class="sidebar-box" href="/videos">Videos</a>
             <a class="sidebar-box" href="/net-friends">Net Friends</a>
